Add last endpoints
